# RoyalRoad_archiver

./: .gitignore  Cargo.toml  TODO
archiver_wasm/: Cargo.toml
archiver_wasm/src/: lib.rs
extension/: manifest.json
extension/css/: royal_road.css
extension/js/: RoyalRoad.js  RoyalRoad_archiver_background.js  RoyalRoad_archiver_content_script.js  background.js
extension/wasm/: RoyalRoad_archiver.js  RoyalRoad_archiver_bg.wasm  royal_road_archiver.js  royal_road_archiver_bg.wasm
