[package]
name = "royal_road_archiver"
version = "2.0.0"
edition = "2024"
description = "An archival program and library for the webnovel site RoyalRoad."
repository = "https://github.com/Raine-gay/royal_road_archiver"
license = "EUPL-1.2" 
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'unwind'    # unwind on panic.
strip = true        # Strip symbols from binary. Gives significant space reductions

[[bin]]
name = "royal_road_archiver"
path = "src/binary.rs"

[lib]
name = "lib_royal_road_archiver"
path = "src/library.rs"

[dependencies]
