[package]
name = "RoyalRoad_archiver"
version = "2.0.0"
edition = "2024"
description = "An archival web extension for the webnovel site RoyalRoad."
repository = "https://github.com/Raine-gay/RoyalRoad_archiver"
license = "EUPL-1.2" 
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
time = { version = "0.3.41", features = ["wasm-bindgen", "local-offset"] }
wasm-bindgen = "0.2.100"
